1.8 must compile against java 1.4